# test_wallet

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.envs/: wallet.env
.github/workflows/: linters.yml  tests.yml
app/config/: asgi.py  config.py  settings.py  urls.py  wsgi.py
app/locale/en/LC_MESSAGES/: django.po
app/wallet/: filters.py  models.py  serializers.py  urls.py  views.py
app/wallet/migrations/: 0001_initial.py
app/wallet/tests/: conftest.py  factories.py  test_transaction.py  test_wallet.py
docker/app/: Dockerfile  gunicorn_conf.py  prestart.sh  start.sh
docker/nginx/: app.conf
